--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "4.0.0",
   "description": "A Beatiful Web MangaViewer.",
   "scripts": {
-    "test": "cross-env NODE_ENV=test PORT=8080 MONGO_URL=mongodb://localhost:27017/mern-test node_modules/.bin/nyc node --harmony-proxies node_modules/.bin/ava",
     "watch:test": "npm run test -- --watch",
     "cover": "nyc npm run test",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
@@ -39,7 +38,8 @@
     "intl": "^1.2.4",
     "isomorphic-fetch": "^2.2.1",
     "limax": "^1.3.0",
-    "mongoose": "^4.4.20",
+    "pg": "^6.0.3",
+    "pg-hstore": "^2.3.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
@@ -48,7 +48,8 @@
     "react-router": "^2.4.1",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "sanitize-html": "^1.11.4"
+    "sanitize-html": "^1.11.4",
+    "sequelize": "^3.23.6"
   },
   "devDependencies": {
     "ava": "^0.15.2",
