--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.9.1",
-    "body-parser": "^1.15.1",
+    "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "cross-env": "^1.0.8",
     "cuid": "^1.3.8",
+    "decompress": "^4.0.0",
     "express": "^4.13.4",
+    "fs-promise": "^0.5.0",
     "intl": "^1.2.4",
     "isomorphic-fetch": "^2.2.1",
     "limax": "^1.3.0",
+    "lodash": "^4.14.0",
+    "multer": "^1.1.0",
     "pg": "^6.0.3",
     "pg-hstore": "^2.3.2",
     "react": "^15.1.0",
@@ -49,7 +53,8 @@
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "sanitize-html": "^1.11.4",
-    "sequelize": "^3.23.6"
+    "sequelize": "^4.0.0-0",
+    "sharp": "^0.15.1"
   },
   "devDependencies": {
     "ava": "^0.15.2",
