--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "isomorphic-fetch": "^2.2.1",
     "limax": "^1.3.0",
     "lodash": "^4.14.0",
+    "morgan": "^1.7.0",
     "multer": "^1.1.0",
     "pg": "^6.0.3",
     "pg-hstore": "^2.3.2",
